# designPatterns

factoryMethod/: CMakeLists.txt
factoryMethod/src/: CMakeLists.txt  camry.cpp  camry.hpp  camry_factory.cpp  camry_factory.hpp  car.hpp  car_factory.hpp  prius.cpp  prius.hpp  prius_factory.cpp  prius_factory.hpp
factoryMethod/test1/: CMakeLists.txt  main.cpp
